[gd_scene load_steps=9 format=3 uid="uid://d08se015voeqa"]

[ext_resource type="FontFile" uid="uid://tshmrijek1ci" path="res://ui/retro_gaming.ttf" id="1_ikp8a"]
[ext_resource type="Script" path="res://ui/menus/main_menu.gd" id="2_0qdp1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4au5l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8xuuj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2bo50"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ndiyl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_akc73"]

[sub_resource type="Theme" id="Theme_ho4i7"]
default_font = ExtResource("1_ikp8a")
default_font_size = 16
Button/colors/font_focus_color = Color(0.380392, 0.372549, 0.705882, 1)
Button/colors/font_hover_color = Color(0.662745, 0.670588, 0.905882, 1)
Button/colors/font_pressed_color = Color(0.258824, 0.254902, 0.490196, 1)
Button/styles/disabled = SubResource("StyleBoxEmpty_4au5l")
Button/styles/focus = SubResource("StyleBoxEmpty_8xuuj")
Button/styles/hover = SubResource("StyleBoxEmpty_2bo50")
Button/styles/normal = SubResource("StyleBoxEmpty_ndiyl")
Button/styles/pressed = SubResource("StyleBoxEmpty_akc73")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ho4i7")
script = ExtResource("2_0qdp1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
text = "Amazing Alien Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartMenu" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer/StartMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../Quit")
text = "Start"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer/StartMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Start")
focus_neighbor_bottom = NodePath("../Start")
focus_next = NodePath("../Start")
focus_previous = NodePath("../Start")
text = "Quit	"

[node name="LevelMenu" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10

[node name="Level 1" type="Button" parent="MarginContainer/VBoxContainer/LevelMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Final Boss")
focus_neighbor_bottom = NodePath("../Level 2")
focus_next = NodePath("../Level 2")
focus_previous = NodePath("../Final Boss")
text = "Level 1"

[node name="Level 2" type="Button" parent="MarginContainer/VBoxContainer/LevelMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Level 1")
focus_neighbor_bottom = NodePath("../Level 3")
focus_next = NodePath("../Level 3")
focus_previous = NodePath("../Level 1")
text = "Level 2"

[node name="Level 3" type="Button" parent="MarginContainer/VBoxContainer/LevelMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Level 2")
focus_neighbor_bottom = NodePath("../Final Boss")
focus_next = NodePath("../Final Boss")
focus_previous = NodePath("../Level 2")
text = "Level 3"

[node name="Final Boss" type="Button" parent="MarginContainer/VBoxContainer/LevelMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Level 3")
focus_neighbor_bottom = NodePath("../Level 1")
focus_next = NodePath("../Level 1")
focus_previous = NodePath("../Level 3")
text = "Final Boss"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="visibility_changed" from="MarginContainer/VBoxContainer/StartMenu" to="." method="_on_buttons_v_box_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StartMenu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StartMenu/Quit" to="." method="_on_quit_pressed"]
[connection signal="visibility_changed" from="MarginContainer/VBoxContainer/LevelMenu" to="." method="_on_buttons_v_box_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LevelMenu/Level 1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LevelMenu/Level 2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LevelMenu/Level 3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LevelMenu/Final Boss" to="." method="_on_final_boss_pressed"]
